# pyPulses

./: .gitignore  README.md  gen_docs.py  pyproject.toml  serve_docs.py  setup.py
.venv3-12-64/: pyvenv.cfg
.venv3-12-64/Scripts/: activate  activate.bat
docs-site/: mkdocs.yml
docs-site/docs/: index.md
legacy/: _output_registry.py  benchmark_pulseGenerator.py  bias_sweep.py  cap_bridge.py  cap_utils.py  chart_recorder.py  dtg5274.py  extract_gap.py  gap_extractor.py  itp_solver.py  kap_bridge.py  kap_bridge_old.py  old_param_sweeps.py  param_sweep_measure.py  plot_sweep.py  polarity_calibrated_channel.py  pulse_amplitude_manager.py  pulse_generator.py  pulse_generator_dtg.py  sr865a.py  srs_lockin.py  sweep_plotter.py  tandem_sweep.py  tdpt_old.py  thread_cell_magic.py  thread_job.py  transistor_resistor_bridge_sweep.py  watd_scope.json  watd_scope.py  wf_balance.py
legacy/fastflight2_utils/: __init__.py  fastflight64.py
legacy/plotting/: __init__.py
pyPulses/: __init__.py  _job_registry.py  thread_job.py
pyPulses/core/: __init__.py  _sidecar_frontend.html  database.py  job.py  mask.py  measurement.py  runner.py  scan.py  sidecar.py  tandem_sweep.py
pyPulses/devices/: __init__.py  _registry.py  abstract_device.py  ad5764.py  ad5791.py  ad5791_cal.json  ad9854.py  attenuator.py  calibrate_pulse_shaper.py  calibrated_channel.py  calibration.py  channel_adapter.py  cryomagnetics_4G.py  dtg.py  dtg5274.py  dtg_comp_pair.py  dtg_diff_pair.py  dtg_utils.py  fastflight2.py  fastflight_scopeview.py  hemt_amp.py  hf2li.py  hp34401a.py  ips120.py  keithley2000.py  keithley2400.py  keithley2450.py  keithley2700.py  mso44.py  nivisa_utils.py  pcm1704.py  pid_dcbox.py  pulse_amplitude_manager.py  pulse_generator.json  pulse_generator.py  pulse_generator_dtg.py  pulse_pair.py  pyvisa_device.py  registry.py  sr865a.py  (+8 more)
pyPulses/devices/ashoorilab/: ad5764.py  ad5791.py  ad9854.py  pcm1704.py  pcm1704_cal.json
pyPulses/devices/fastflight2_utils/: fastflight32.py  fastflight64.py  ff_bridge_server.py  (+1 more)
pyPulses/plotting/: __init__.py  chart_recorder.py  recorder.py  sweep_plotter.py  sync_sweep_plotter.py
pyPulses/routines/: R_predictor.py  __init__.py  balance_parameter.py  benchmark_pulseGenerator.py  cap_bridge.py  cap_utils.py  example_transistor_balancing.ipynb  extract_gap.py  gap_extractor.py  kap_bridge.py  linear_balance.py  pulsed_R_bridge.py  tdpt.py  test_gates.py  transistor_resistor_bridge_sweep.py  wf_balance.py  wfatd.py  ztan_inv_coeff.npy
pyPulses/utils/: R_predictor.py  __init__.py  balance1d.py  balance_1d.py  balance_predictor.py  bias_sweep.py  bracket_ITP.py  brent_solver.py  brent_solver_fixed.py  chart_recorder.py  curves.py  decorators.py  dummy_predictor.py  extrap_predictor1d.py  extrap_predictorNd.py  get_quick_logger.py  getsetter.py  itp_solver.py  kalman.py  old_param_sweeps.py  param_sweep_measure.py  plot_sweep.py  rootfinder.py  saveData.py  send_mail.py  stats.py  tandem_sweep.py
(+22 files in other folders)
