[project]
name = "pyPulses"
version = "1.0.0"
description = "Instrument control code for pulsing measurements"
readme = "README.md"
authors = [
    {name = "Jackson Butler", email = "jbutler4@mit.edu"},
    {name = "Andrew DiFabbio", email = "avd38@mit.edu"}
]
maintainers = [
    {name = "Andrew DiFabbio", email = "avd38@mit.edu"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Operating System :: OS Dependent",
  "Intended Audience :: Science/Research"
]
requires-python = ">=3.10"
dependencies = [
    "bitarray",
    "gpib-ctypes>=0.2",
    "ipython>=9.0",
    "matplotlib",
    "mkdocs",
    "numpy>=2.0",
    "pyserial>=3.5",
    "PyQT5",
    "PyVISA>=1.14",
    "PyVISA-py>=0.7",
    "zhinst-toolkit"
]

[project.optional-dependencies]
plotting = [
    "plotly"
]

[project.urls]
repository = "https://github.com/Andyrew2357/pyPulses.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "pyPulses", 
    "pyPulses.devices", 
    "pyPulses.plotting",
    "pyPulses.routines",
    "pyPulses.utils"
]

[tool.setuptools.package-data]
example = [
    "*.json",
    "*.npy"
]
